--- a/src/scss/storefront-supermarket/_supermarket-productDetails.scss
+++ b/src/scss/storefront-supermarket/_supermarket-productDetails.scss
@@ -46,9 +46,10 @@
 
 	.product-essentials {
 		container: essentials / inline-size;
-		top: 2rem;
+		top: 3rem;
 		position: sticky;
 		align-self: start;
+		z-index: 5;
 
 		background: var(--color-white);
 		border: var(--thickness-sm) solid var(--color-border-default);
@@ -181,6 +182,7 @@
 			display: flex;
 			flex-direction: row;
 			gap: var(--spacing-2xs);
+			margin-inline: var(--spacing-xs);
 
 			ul {
 				display: grid;
@@ -207,7 +209,7 @@
 				&[aria-pressed="true"] {
 					outline: var(--thickness-lg) solid var(--color-brand-primary);
 					position: relative;
-					z-index: 10;
+					z-index: 1;
 				}
 			}			
 		}
